Fix spacing between section

--- a/faq.css
+++ b/faq.css
@@ -15,6 +15,7 @@ body {
 
 .faq-section{
   margin-top: 60px;
+  margin-bottom: 70px;
 }
 
 .faq-container {
